syntax = "proto3";

package sf.solana.dex.meta.v1;

message PbCreatorLayout {
    string address = 1;
    bool verified = 2;
    uint32 share = 3;
}

message PbCollectionLayout {
    bool verified = 1;
    string key = 2;
}

message PbUsesLayout {
    string useMethod = 1;
    uint64 remaining = 2;
    uint64 total = 3;
}

message PbCollectionDetailsLayout {
    string name = 1;
    uint64 size = 2;
}

message PbDataLayout {
    string name = 1;
    string symbol = 2;
    string uri = 3;
    uint32 sellerFeeBasisPoints = 4;
    repeated PbCreatorLayout creators = 5;
}

message PbDataV2Layout {
    string name = 1;
    string symbol = 2;
    string uri = 3;
    uint32 sellerFeeBasisPoints = 4;
    repeated PbCreatorLayout creators = 5;
    optional PbCollectionLayout collection = 6;
    optional PbUsesLayout uses = 7;
}

message PbCreateMetadataAccountArgsLayout {
    PbDataLayout data = 1;
    bool isMutable = 2;
}

message PbCreateMetadataAccountArgsV2Layout {
    PbDataV2Layout data = 1;
    bool isMutable = 2;
}

message PbCreateMetadataAccountArgsV3Layout {
    PbDataV2Layout data = 1;
    bool isMutable = 2;
    optional PbCollectionDetailsLayout collectionDetails = 3;
}

message Arg {
    optional PbCreateMetadataAccountArgsLayout createMetadataAccountArgs = 1;
    optional PbCreateMetadataAccountArgsV2Layout createMetadataAccountArgsV2 = 2;
    optional PbCreateMetadataAccountArgsV3Layout createMetadataAccountArgsV3 = 3;
    string instruction_type = 4;
}

message InputAccounts {
    optional string metadata = 1;
    optional string mint = 2;
    optional string mintAuthority = 3;
    optional string payer = 4;
    optional string systemProgram = 5;
    optional string updateAuthority = 6;
    optional string useAuthority = 7;
    optional string rent = 8;
}

message TokenMetadataMeta {
    string block_date = 1;
    int64 block_time = 2;
    string tx_id = 3;
    string dapp = 4;
    uint64 block_slot = 5;
    uint32 instruction_index = 7;
    bool is_inner_instruction = 8;
    uint32 inner_instruction_index = 9;
    string instruction_type = 10;
    Arg args = 11;
    InputAccounts input_accounts = 12;
}

message TokenMetas {
    repeated TokenMetadataMeta data = 1;
}